--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="یہ آسان کام مکمل کرکے فوراً $50 کمائیں۔ ابھی عمل کریں!">
     <meta name="keywords" content="پیسے کمائیں, CPA پیشکشیں, آن لائن انعامات, فوری ادائیگی">
-    <title>💸 فوراً $50 کمائیں!</title>
+    <title>💸 فوراً 13000 PKR کمائیں!</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
@@ -92,8 +92,8 @@
 
 <!-- Compact Header with Image -->
 <div class="hero">
-    <img src="https://www.exactchange.es/uploads/portadas_post/historia-de-la-moneda-dolar-estadounidense-monedas-del-mundo.png" alt="$50 کمائیں">
-    <h1>💸 فوراً $50 کمائیں!</h1>
+    <img src="https://media.istockphoto.com/id/1353403216/es/foto/billetes-pakistan%C3%ADes-billetes-de-rupia-pakistan%C3%AD-50-rupias-pkr-negocios-antecedentes.jpg?s=612x612&w=0&k=20&c=hPebgbtVaN5nK3Yt288sKtiPIz25yKCMACrz_XZOuNY=" alt="$50 کمائیں">
+    <h1>💸 فوراً 13000 PKR کمائیں!</h1>
     <p>ایک آسان کام مکمل کریں اور ابھی انعام حاصل کریں۔ بغیر کسی تاخیر کے، بس نتیجہ!</p>
     <a href="https://eradictrkr.com/pauldev" class="cta-button">اپنا $50 ابھی حاصل کریں</a>
 </div>
@@ -105,7 +105,7 @@
     <ol>
         <li><strong>اوپر دیئے گئے بٹن پر کلک کریں</strong> پیشکش کے صفحے تک رسائی کے لئے۔</li>
         <li>ہدایات پر عمل کریں (مثلاً، ایک مختصر سروے مکمل کریں یا سائن اپ کریں)۔</li>
-        <li>اپنا $50 فوراً حاصل کریں—یہ اتنا ہی آسان ہے!</li>
+        <li>اپنا 13000 PKR فوراً حاصل کریں—یہ اتنا ہی آسان ہے!</li>
     </ol>
 </div>
 
