--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <img src="https://media.istockphoto.com/id/1353403216/es/foto/billetes-pakistan%C3%ADes-billetes-de-rupia-pakistan%C3%AD-50-rupias-pkr-negocios-antecedentes.jpg?s=612x612&w=0&k=20&c=hPebgbtVaN5nK3Yt288sKtiPIz25yKCMACrz_XZOuNY=" alt="$50 کمائیں">
     <h1>💸 فوراً 13000 PKR کمائیں!</h1>
     <p>ایک آسان کام مکمل کریں اور ابھی انعام حاصل کریں۔ بغیر کسی تاخیر کے، بس نتیجہ!</p>
-    <a href="https://eradictrkr.com/pauldev" class="cta-button">اپنا $50 ابھی حاصل کریں</a>
+    <a href="https://eradictrkr.com/pauldev" class="cta-button">اپنا 13000 PKR ابھی حاصل کریں</a>
 </div>
 
 <!-- Steps Section -->
