--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="ur">
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-51HGPD2RKP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-51HGPD2RKP');
-</script>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-51HGPD2RKP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-51HGPD2RKP');
+    </script>
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="یہ آسان کام مکمل کرکے فوراً $50 کمائیں۔ ابھی عمل کریں!">
-    <meta name="keywords" content="پیسے کمائیں, CPA پیشکشیں, آن لائن انعامات, فوری ادائیگی">
-    <title>💸 فوراً 13000 PKR کمائیں!</title>
+    <meta name="description" content="یہ آسان کام مکمل کرکے فوراً 13000 PKR کمائیں۔ 2024 میں آن لائن پیسہ کمانے کے لئے سب سے آسان طریقہ۔">
+    <meta name="keywords" content="پیسے کمائیں, فوری ادائیگی, 13000 PKR, آن لائن انعامات, پیسہ کمانا, آسان کام">
+    <meta name="author" content="EarnRewardsNow">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="💸 فوراً 13000 PKR کمائیں!">
+    <meta property="og:description" content="ایک مختصر کام مکمل کریں اور فوراً 13000 PKR حاصل کریں۔ سب سے تیز آن لائن انعامی موقع 2024۔">
+    <meta property="og:image" content="https://media.istockphoto.com/id/1353403216/es/foto/billetes-pakistan%C3%ADes-billetes-de-rupia-pakistan%C3%AD-50-rupias-pkr-negocios-antecedentes.jpg?s=612x612&w=0&k=20&c=hPebgbtVaN5nK3Yt288sKtiPIz25yKCMACrz_XZOuNY=">
+    <meta property="og:url" content="https://eradictrkr.com/pauldev">
+    <meta name="twitter:card" content="summary_large_image">
+    <title>💸 فوراً 13000 PKR کمائیں - 2024 کے بہترین مواقع</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
             background: #f8f9fa;
@@ -27,7 +33,7 @@
             text-align: center;
         }
         .hero {
-            background: #28a745; /* زور دینے کے لئے سبز پس منظر */
+            background: linear-gradient(to right, #28a745, #2ecc71);
             color: white;
             padding: 20px 20px 40px 20px;
         }
@@ -38,7 +44,7 @@
             margin-bottom: 20px;
         }
         .hero h1 {
-            font-size: 2rem;
+            font-size: 2.5rem;
             margin-bottom: 15px;
         }
         .hero p {
@@ -46,7 +52,7 @@
             margin-bottom: 25px;
         }
         .cta-button {
-            background: #ffc107; /* توجہ کے لئے روشن پیلا */
+            background: #ffc107;
             color: black;
             padding: 15px 30px;
             font-size: 1.2rem;
@@ -65,14 +71,10 @@
             font-size: 1.8rem;
             margin-bottom: 15px;
         }
-        .steps p {
-            font-size: 1.1rem;
-            margin-bottom: 20px;
-        }
         .steps ol {
             max-width: 600px;
             margin: 0 auto;
-            text-align: left;
+            text-align: right;
             font-size: 1rem;
             line-height: 1.6;
         }
@@ -90,22 +92,21 @@
 </head>
 <body>
 
-<!-- Compact Header with Image -->
+<!-- Header Section -->
 <div class="hero">
-    <img src="https://media.istockphoto.com/id/1353403216/es/foto/billetes-pakistan%C3%ADes-billetes-de-rupia-pakistan%C3%AD-50-rupias-pkr-negocios-antecedentes.jpg?s=612x612&w=0&k=20&c=hPebgbtVaN5nK3Yt288sKtiPIz25yKCMACrz_XZOuNY=" alt="$50 کمائیں">
+    <img src="https://media.istockphoto.com/id/1353403216/es/foto/billetes-pakistan%C3%ADes-billetes-de-rupia-pakistan%C3%AD-50-rupias-pkr-negocios-antecedentes.jpg?s=612x612&w=0&k=20&c=hPebgbtVaN5nK3Yt288sKtiPIz25yKCMACrz_XZOuNY=" alt="13000 PKR کمائیں">
     <h1>💸 فوراً 13000 PKR کمائیں!</h1>
-    <p>ایک آسان کام مکمل کریں اور ابھی انعام حاصل کریں۔ بغیر کسی تاخیر کے، بس نتیجہ!</p>
-    <a href="https://eradictrkr.com/pauldev" class="cta-button">اپنا 13000 PKR ابھی حاصل کریں</a>
+    <p>آن لائن پیسہ کمانا اب اور بھی آسان۔ 2024 کے بہترین مواقع سے فائدہ اٹھائیں۔</p>
+    <a href="https://eradictrkr.com/pauldev" class="cta-button">ابھی اپنا 13000 PKR حاصل کریں</a>
 </div>
 
 <!-- Steps Section -->
 <div class="steps">
     <h2>یہ کیسے کام کرتا ہے</h2>
-    <p>اپنا انعام حاصل کرنے کے لئے صرف 3 آسان مراحل:</p>
     <ol>
-        <li><strong>اوپر دیئے گئے بٹن پر کلک کریں</strong> پیشکش کے صفحے تک رسائی کے لئے۔</li>
-        <li>ہدایات پر عمل کریں (مثلاً، ایک مختصر سروے مکمل کریں یا سائن اپ کریں)۔</li>
-        <li>اپنا 13000 PKR فوراً حاصل کریں—یہ اتنا ہی آسان ہے!</li>
+        <li><strong>اوپر دیئے گئے بٹن پر کلک کریں</strong> تاکہ پیشکش کے صفحے تک پہنچ سکیں۔</li>
+        <li>ہدایات پر عمل کریں (مثال کے طور پر، ایک مختصر سروے مکمل کریں یا رجسٹر ہوں)۔</li>
+        <li>13000 PKR فوری طور پر حاصل کریں—یہ اتنا ہی آسان ہے!</li>
     </ol>
 </div>
 
@@ -117,6 +118,10 @@
 
 </body>
 </html>
+
+
+
+
 
 
 
