--- a/index.html
+++ b/index.html
@@ -10,46 +10,50 @@
       gtag('config', 'G-51HGPD2RKP');
     </script>
     
+    <!-- Meta اہم -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="یہ آسان کام مکمل کرکے فوراً 13000 PKR کمائیں۔ 2024 میں آن لائن پیسہ کمانے کے لئے سب سے آسان طریقہ۔">
-    <meta name="keywords" content="پیسے کمائیں, فوری ادائیگی, 13000 PKR, آن لائن انعامات, پیسہ کمانا, آسان کام">
-    <meta name="author" content="EarnRewardsNow">
+    
+    <!-- SEO Meta -->
+    <meta name="description" content="آن لائن آسان ٹاسک مکمل کریں اور فوراً $50 کمائیں۔ 10,000+ افراد کے ساتھ شامل ہوں اور جلدی ادائیگی کا فائدہ اٹھائیں!">
+    <meta name="keywords" content="آن لائن پیسہ کمائیں, فوری $50 کمائیں, تیز ادائیگی, CPA آفرز, آن لائن انعامات, فوری کمائی, پاکستان میں پیسہ کمانے کے طریقے">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="💸 فوراً 13000 PKR کمائیں!">
-    <meta property="og:description" content="ایک مختصر کام مکمل کریں اور فوراً 13000 PKR حاصل کریں۔ سب سے تیز آن لائن انعامی موقع 2024۔">
-    <meta property="og:image" content="https://media.istockphoto.com/id/1353403216/es/foto/billetes-pakistan%C3%ADes-billetes-de-rupia-pakistan%C3%AD-50-rupias-pkr-negocios-antecedentes.jpg?s=612x612&w=0&k=20&c=hPebgbtVaN5nK3Yt288sKtiPIz25yKCMACrz_XZOuNY=">
-    <meta property="og:url" content="https://eradictrkr.com/pauldev">
+    <meta name="author" content="EarnRewardsNow">
+
+    <title>💸 فوری $50 کمائیں! | آن لائن پیسہ کمانے کا تیز ترین طریقہ</title>
+
+    <!-- Open Graph Meta -->
+    <meta property="og:title" content="💸 فوری $50 کمائیں! | آن لائن پیسہ کمانے کا تیز ترین طریقہ">
+    <meta property="og:description" content="آن لائن آسان ٹاسک مکمل کریں اور فوراً $50 کمائیں۔ کسی ادائیگی کی معلومات کی ضرورت نہیں۔ ابھی شروع کریں!">
+    <meta property="og:image" content="https://www.exactchange.es/uploads/portadas_post/historia-de-la-moneda-dolar-estadounidense-monedas-del-mundo.png">
+    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <title>💸 فوراً 13000 PKR کمائیں - 2024 کے بہترین مواقع</title>
+    <meta name="twitter:title" content="💸 فوری $50 کمائیں! | آن لائن پیسہ کمانے کا تیز ترین طریقہ">
+    <meta name="twitter:description" content="آن لائن آسان ٹاسک مکمل کریں اور فوراً $50 کمائیں۔ کسی ادائیگی کی معلومات کی ضرورت نہیں۔ ابھی شروع کریں!">
+    <meta name="twitter:image" content="https://www.exactchange.es/uploads/portadas_post/historia-de-la-moneda-dolar-estadounidense-monedas-del-mundo.png">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background: #f8f9fa;
             color: #333;
-            text-align: center;
         }
         .hero {
-            background: linear-gradient(to right, #28a745, #2ecc71);
+            background: #28a745;
             color: white;
-            padding: 20px 20px 40px 20px;
-        }
-        .hero img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-            margin-bottom: 20px;
+            padding: 40px 20px;
+            text-align: center;
         }
         .hero h1 {
             font-size: 2.5rem;
             margin-bottom: 15px;
-        }
-        .hero p {
-            font-size: 1.2rem;
-            margin-bottom: 25px;
         }
         .cta-button {
             background: #ffc107;
@@ -58,62 +62,59 @@
             font-size: 1.2rem;
             text-decoration: none;
             border-radius: 5px;
-            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-            transition: background 0.3s;
+            display: inline-block;
         }
         .cta-button:hover {
             background: #e0a800;
         }
-        .steps {
+        .steps, .faq {
             padding: 30px 20px;
         }
-        .steps h2 {
-            font-size: 1.8rem;
-            margin-bottom: 15px;
-        }
-        .steps ol {
-            max-width: 600px;
+        .steps ol, .faq {
+            max-width: 700px;
             margin: 0 auto;
-            text-align: right;
+            text-align: left;
             font-size: 1rem;
-            line-height: 1.6;
         }
         .footer {
             background: #333;
             color: white;
-            padding: 15px;
-            font-size: 0.9rem;
-        }
-        .footer a {
-            color: #00aaff;
-            text-decoration: none;
+            padding: 20px;
+            text-align: center;
         }
     </style>
 </head>
 <body>
 
-<!-- Header Section -->
+<!-- Hero Section -->
 <div class="hero">
-    <img src="https://media.istockphoto.com/id/1353403216/es/foto/billetes-pakistan%C3%ADes-billetes-de-rupia-pakistan%C3%AD-50-rupias-pkr-negocios-antecedentes.jpg?s=612x612&w=0&k=20&c=hPebgbtVaN5nK3Yt288sKtiPIz25yKCMACrz_XZOuNY=" alt="13000 PKR کمائیں">
-    <h1>💸 فوراً 13000 PKR کمائیں!</h1>
-    <p>آن لائن پیسہ کمانا اب اور بھی آسان۔ 2024 کے بہترین مواقع سے فائدہ اٹھائیں۔</p>
-    <a href="https://eradictrkr.com/pauldev" class="cta-button">ابھی اپنا 13000 PKR حاصل کریں</a>
+    <h1>💸 فوری $50 کمائیں!</h1>
+    <p>10,000+ افراد کے ساتھ شامل ہوں جو منٹوں میں پیسہ کما رہے ہیں۔ کسی خفیہ فیس یا ادائیگی کی معلومات کی ضرورت نہیں!</p>
+    <a href="https://eradictrkr.com/pauldev" class="cta-button">ابھی انعام حاصل کریں</a>
 </div>
 
 <!-- Steps Section -->
 <div class="steps">
-    <h2>یہ کیسے کام کرتا ہے</h2>
+    <h2>فوری $50 کیسے حاصل کریں</h2>
     <ol>
-        <li><strong>اوپر دیئے گئے بٹن پر کلک کریں</strong> تاکہ پیشکش کے صفحے تک پہنچ سکیں۔</li>
-        <li>ہدایات پر عمل کریں (مثال کے طور پر، ایک مختصر سروے مکمل کریں یا رجسٹر ہوں)۔</li>
-        <li>13000 PKR فوری طور پر حاصل کریں—یہ اتنا ہی آسان ہے!</li>
+        <li>🖱️ اوپر دیے گئے بٹن پر کلک کریں اور پیشکش کے صفحے پر جائیں۔</li>
+        <li>✅ سادہ ہدایات پر عمل کریں، جیسے کہ سروے مکمل کرنا یا سائن اپ کرنا۔</li>
+        <li>💵 فوراً اپنے اکاؤنٹ میں $50 حاصل کریں!</li>
     </ol>
 </div>
 
-<!-- Footer -->
+<!-- FAQ Section -->
+<div class="faq">
+    <h2>عمومی سوالات</h2>
+    <p><strong>کیا یہ پیشکش حقیقی ہے؟</strong> جی ہاں! ہزاروں افراد نے آسان ٹاسک مکمل کر کے انعام حاصل کیا ہے۔</p>
+    <p><strong>یہ کتنا وقت لیتا ہے؟</strong> زیادہ تر ٹاسک 5 منٹ سے کم وقت میں مکمل ہو جاتے ہیں۔</p>
+    <p><strong>کیا مجھے کچھ ادا کرنا پڑے گا؟</strong> نہیں۔ اس میں شرکت مکمل طور پر مفت ہے!</p>
+</div>
+
+<!-- Footer Section -->
 <div class="footer">
-    <p>© 2024 EarnRewardsNow۔ جملہ حقوق محفوظ ہیں۔</p>
-    <p><a href="#">پرائیویسی پالیسی</a> | <a href="#">شرائط و ضوابط</a></p>
+    <p>© 2024 EarnRewardsNow. تمام حقوق محفوظ ہیں۔</p>
+    <p><a href="#">رازداری کی پالیسی</a> | <a href="#">سروس کی شرائط</a></p>
 </div>
 
 </body>
