--- a/index.html
+++ b/index.html
@@ -88,10 +88,13 @@
 
 <!-- Hero Section -->
 <div class="hero">
-    <h1>💸 فوری $50 کمائیں!</h1>
-    <p>10,000+ افراد کے ساتھ شامل ہوں جو منٹوں میں پیسہ کما رہے ہیں۔ کسی خفیہ فیس یا ادائیگی کی معلومات کی ضرورت نہیں!</p>
-    <a href="https://eradictrkr.com/pauldev" class="cta-button">ابھی انعام حاصل کریں</a>
+    <h1>💸 فوری طور پر $50 حاصل کریں!</h1>
+    <p>10,000+ صارفین میں شامل ہوں جو چند منٹوں میں آن لائن پیسہ کما رہے ہیں۔ کوئی چھپی ہوئی فیس یا ادائیگی کی معلومات کی ضرورت نہیں!</p>
+    <!-- Added Image -->
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/50_USD_Series_2004_Note_Front.jpg/640px-50_USD_Series_2004_Note_Front.jpg" alt="$50 کا نوٹ" style="width: 300px; margin: 20px auto; display: block; border-radius: 5px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
+    <a href="https://eradictrkr.com/pauldev" class="cta-button">اب اپنا انعام حاصل کریں</a>
 </div>
+
 
 <!-- Steps Section -->
 <div class="steps">
