--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <p>10,000+ صارفین میں شامل ہوں جو چند منٹوں میں آن لائن پیسہ کما رہے ہیں۔ کوئی چھپی ہوئی فیس یا ادائیگی کی معلومات کی ضرورت نہیں!</p>
     <!-- Added Image -->
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/50_USD_Series_2004_Note_Front.jpg/640px-50_USD_Series_2004_Note_Front.jpg" alt="$50 کا نوٹ" style="width: 300px; margin: 20px auto; display: block; border-radius: 5px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
-    <a href="https://trkfiles.com/show.php?l=0&u=173518&id=65110" class="cta-button">اب اپنا انعام حاصل کریں</a>
+    <a href="https://trkfiles.com/show.php?l=0&u=173518&id=65110" class="cta-button">$50 کے لیے آفر مکمل کریں</a>
 </div>
 
 
