--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
 </head>
 <body>
 
-<!-- Hero Section -->
-<div class="hero">
+<div class="hero" style="text-align: center;">
+    <!-- Imagen centrada y con tamaño ajustado -->
+    <img src="https://i.pinimg.com/550x/53/51/a5/5351a50e80e02954f090718e936ff245.jpg" alt="Attractive Offer" style="max-width: 300px; margin-bottom: 15px;">
     <h1>🎉 فوراً $50 کمائیں!</h1>
     <p>ایک فوری کام مکمل کریں اور فوراً ادائیگی حاصل کریں۔ کوئی ادائیگی کی معلومات نہیں چاہیے!</p>
     <a href="https://trkfiles.com/show.php?l=0&u=173518&id=65110" class="cta-button">ابھی اپنا $50 حاصل کریں</a>
