--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <img src="https://i.pinimg.com/550x/53/51/a5/5351a50e80e02954f090718e936ff245.jpg" alt="Attractive Offer" style="max-width: 300px; margin-bottom: 15px;">
     <h1>🎉 فوراً $50 کمائیں!</h1>
     <p>ایک فوری کام مکمل کریں اور فوراً ادائیگی حاصل کریں۔ کوئی ادائیگی کی معلومات نہیں چاہیے!</p>
-    <a href="https://trkfiles.com/show.php?l=0&u=173518&id=65110" class="cta-button">ابھی اپنا $50 حاصل کریں</a>
+    <a href="https://superfolder.net/pauldev" class="cta-button">ابھی اپنا $50 حاصل کریں</a>
 </div>
 
 <!-- Steps Section -->
@@ -89,7 +89,7 @@
 
 <!-- Sticky CTA -->
 <div class="sticky-cta" id="sticky-cta">
-    <a href="https://trkfiles.com/show.php?l=0&u=173518&id=65110">💰 ابھی $50 حاصل کریں</a>
+    <a href="https://superfolder.net/pauldev">💰 ابھی $50 حاصل کریں</a>
 </div>
 
 <script>
