--- a/index.html
+++ b/index.html
@@ -1,108 +1,214 @@
 <!DOCTYPE html>
 <html lang="ur">
 <head>
-     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-51HGPD2RKP"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-51HGPD2RKP');
-    </script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="آسان کام مکمل کر کے فوراً $50 کمائیں! کوئی ادائیگی کی معلومات کی ضرورت نہیں۔ ابھی شروع کریں!">
-    <meta name="keywords" content="کمائیں $50، آن لائن تیز پیسہ، سی پی اے آفرز، فوری انعامات، آن لائن آمدنی">
-    <meta name="author" content="Earn Rewards Team">
-    <meta name="robots" content="index, follow">
-    <title>🎉 فوراً $50 کمائیں - محدود وقت کی پیشکش!</title>
-
-    <!-- Open Graph Metadata -->
-    <meta property="og:title" content="فوراً $50 کمائیں - محدود وقت کی پیشکش">
-    <meta property="og:description" content="ہزاروں افراد جو فوراً $50 کما رہے ہیں، جانیے کیسے!">
-    <meta property="og:image" content="https://images.unsplash.com/photo-1584643703403-2895fa13ec0e?crop=entropy&cs=tinysrgb&fit=max&ixid=MnwzNjg1OXwwfDF8c2VhcmNofDIxfHxjdW0lMjBhJTIwYmFzZWQwb3Bwb3J0dW5pdHklMjBpbmZvJTIwcmVsYXRlZCUyMGVjb25vbWljJTIwbW9uZXklMkZ8ZW58MHx8fHwxNjg5MDAwNTI0&ixlib=rb-1.2.1&q=80&w=1080&h=720&fit=crop">
-    <meta property="og:url" content="https://yourwebsite.com">
-
-    <!-- Structured Data Schema (WebPage and FAQ schema) -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "فوراً $50 کمائیں - محدود وقت کی پیشکش",
-      "description": "آسان کام مکمل کر کے فوراً $50 کمائیں! کوئی ادائیگی کی معلومات کی ضرورت نہیں۔ ابھی شروع کریں!",
-      "url": "https://yourwebsite.com"
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-51HGPD2RKP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-51HGPD2RKP');
+  </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="چند مراحل مکمل کریں اور آج ہی اپنے Surfe.be اکاؤنٹ میں $100 حاصل کریں!">
+  <meta name="keywords" content="آن لائن پیسہ کمائیں، فوری انعامات، Surfe.be آفر">
+  <title>$100 حاصل کریں – آسان مراحل مکمل کریں</title>
+  <link rel="icon" href="https://static.surfe.be/notif-icon.png" type="image/png" sizes="16x16">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <style>
+    body {
+      background-color: #ECF0F7;
+      color: #3D3D3D;
+      font-family: 'Noto Nastaliq Urdu', Arial, Tahoma, sans-serif;
+      direction: rtl;
     }
-    </script>
-    
-    <!-- CSS Styles (Minified and Optimized) -->
-    <style>
-        body{font-family:'Arial',sans-serif;margin:0;padding:0;background-color:#f9f9f9;color:#333}.hero{background-color:white;color:#333;text-align:center;padding:40px 20px;box-shadow:0 4px 10px rgba(0,0,0,.1)}.hero h1{font-size:2.8rem;margin:0 0 10px;color:#28a745}.hero p{font-size:1.3rem;margin:15px 0 25px;color:#333}.hero img{width:280px;margin:20px 0;border-radius:5px;box-shadow:0 4px 12px rgba(0,0,0,.2)}.cta-button{background-color:#ffc107;color:black;padding:15px 30px;font-size:1.2rem;font-weight:bold;text-decoration:none;border-radius:5px;display:inline-block;transition:all .3s}.cta-button:hover{background-color:#e0a800}.steps,.proof,.faq{padding:20px;text-align:center}.steps ol{text-align:left;margin:20px auto;max-width:600px;font-size:1.1rem;color:#555}.proof img{width:250px;margin:20px 0;border-radius:5px;box-shadow:0 4px 10px rgba(0,0,0,.2)}.testimonials{background-color:#f8f9fa;padding:30px 20px;text-align:center}.testimonial{margin:20px auto;max-width:600px;font-size:1rem;color:#555}.testimonial img{width:60px;height:60px;border-radius:50%;margin-bottom:10px;box-shadow:0 2px 6px rgba(0,0,0,.2)}.footer{background-color:#333;color:white;text-align:center;padding:10px 20px;font-size:.9rem}.footer a{color:#ffc107;text-decoration:none}.footer a:hover{text-decoration:underline}.sticky-cta{position:fixed;bottom:10px;right:10px;background-color:#ffc107;color:black;padding:15px 25px;font-size:1rem;font-weight:bold;border-radius:30px;box-shadow:0 4px 10px rgba(0,0,0,.2);display:none}.sticky-cta.visible{display:block}
-    </style>
+    .logo-container {
+      background-color: #293A77;
+      padding: 20px;
+      text-align: center;
+    }
+    .logo {
+      display: block;
+      width: 200px;
+      margin: 0 auto;
+    }
+    .hero-section, .instructions-section, .testimonial-section {
+      background-color: #FFFFFF;
+      text-align: center;
+      padding: 40px 20px;
+      border-radius: 10px;
+      margin-top: 20px;
+    }
+    .hero-section h1 {
+      font-size: 2.5rem;
+      margin-bottom: 15px;
+      color: #3F8EFA;
+    }
+    .hero-section p {
+      font-size: 1.2rem;
+      margin-bottom: 20px;
+    }
+    .cta-btn {
+      background-color: #3F8EFA;
+      color: #FFFFFF;
+      font-weight: bold;
+      font-size: 1.2rem;
+      padding: 10px 20px;
+      border-radius: 5px;
+      text-decoration: none;
+      transition: all 0.3s ease;
+      display: inline-block;
+    }
+    .cta-btn:hover {
+      background-color: #2F76C1;
+    }
+    .instructions-section h2, .testimonial-section h2 {
+      font-size: 1.8rem;
+      margin-bottom: 20px;
+    }
+    .instructions-section ol {
+      font-size: 1rem;
+      margin-right: 20px;
+      text-align: right;
+    }
+    .instructions-section li {
+      margin-bottom: 10px;
+    }
+    .testimonial {
+      margin-top: 20px;
+      padding: 20px;
+      background-color: #F7F9FC;
+      border-radius: 10px;
+      text-align: right;
+      font-size: 1rem;
+      color: #3D3D3D;
+    }
+    .testimonial img {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      margin-left: 15px;
+    }
+    .testimonial-header {
+      display: flex;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+    .testimonial-name {
+      font-weight: bold;
+      font-size: 1.1rem;
+    }
+    .testimonial-location {
+      font-size: 0.9rem;
+      color: #94a3b8;
+    }
+    .sticky-button {
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+      background-color: #3F8EFA;
+      color: #FFFFFF;
+      font-size: 1rem;
+      padding: 10px 20px;
+      border-radius: 5px;
+      text-align: center;
+      z-index: 9999;
+      transition: background-color 0.3s ease;
+    }
+    .sticky-button:hover {
+      background-color: #2F76C1;
+    }
+    footer {
+      background-color: #293A77;
+      color: #94a3b8;
+      text-align: center;
+      padding: 20px 0;
+      margin-top: 30px;
+    }
+    footer a {
+      color: #FFFF;
+      text-decoration: none;
+    }
+    footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
+  <div class="logo-container">
+    <img src="https://static.surfe.be/images/LOGO-new-full-white.png" alt="لوگو" class="logo">
+  </div>
 
-<div class="hero" style="text-align: center;">
-    <!-- Imagen centrada y con tamaño ajustado -->
-    <img src="https://i.pinimg.com/550x/53/51/a5/5351a50e80e02954f090718e936ff245.jpg" alt="Attractive Offer" style="max-width: 300px; margin-bottom: 15px;">
-    <h1>🎉 فوراً $50 کمائیں!</h1>
-    <p>ایک فوری کام مکمل کریں اور فوراً ادائیگی حاصل کریں۔ کوئی ادائیگی کی معلومات نہیں چاہیے!</p>
-    <a href="https://superfolder.net/pauldev" class="cta-button">ابھی اپنا $50 حاصل کریں</a>
-</div>
-
-<!-- Steps Section -->
-<div class="steps">
-    <h2>یہ کیسے کام کرتا ہے</h2>
-    <ol>
-        <li>اوپر دیئے گئے بٹن پر کلک کریں تاکہ آفر پیج تک پہنچ سکیں۔</li>
-        <li>ایک فوری کام مکمل کریں، جیسے سروے یا سائن اپ۔</li>
-        <li>آپ کا $50 فوراً آپ کے اکاؤنٹ میں منتقل ہو جائے گا!</li>
-    </ol>
-</div>
-
-<!-- Proof Section -->
-<div class="proof">
-    <h2>💸 ادائیگی کا ثبوت</h2>
-    <img src="https://ai.flux-image.com/flux/f9b52303-0a7d-487b-a8c4-ab563446342f.jpg" alt="Payment Proof">
-    <p>ہزاروں افراد پہلے ہی اپنا $50 حاصل کر چکے ہیں! موقع ہاتھ سے نہ جانے دیں!</p>
-</div>
-
-<!-- Testimonials Section -->
-<div class="testimonials">
-    <h2>لوگ کیا کہہ رہے ہیں</h2>
-    <div class="testimonial">
-        <img src="https://randomuser.me/api/portraits/women/47.jpg" alt="Sarah">
-        <p>"مجھے یقین نہیں آیا کہ یہ کتنا آسان تھا! صرف چند منٹوں میں $50 حاصل کیا!"</p>
-        <p>- سارہ، امریکہ</p>
+  <div class="container">
+    <!-- Hero Section -->
+    <div class="hero-section">
+      <h1>💵 فوراً $100 حاصل کریں!</h1>
+      <p>سروے مکمل کریں، ایپس ڈاؤنلوڈ کریں یا رجسٹریشن کریں اور Surfe.be اکاؤنٹ میں $100 وصول کریں!</p>
+      <a href="https://trkfiles.com/show.php?l=0&u=173518&id=65110" target="_blank" class="cta-btn" id="offer-link">ابھی شروع کریں</a>
     </div>
-    <div class="testimonial">
-        <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="John">
-        <p>"آسان کام، فوری ادائیگی۔ بہترین تجربہ تھا!"</p>
-        <p>- جان، برطانیہ</p>
+
+    <!-- Instructions Section -->
+    <div class="instructions-section">
+      <h2>یہ کیسے کام کرتا ہے؟</h2>
+      <ol>
+        <li>اوپر "ابھی شروع کریں" بٹن پر کلک کریں۔</li>
+        <li>باہر کے صفحے پر درج ذیل میں سے کوئی ایک کام مکمل کریں:
+          <ul>
+            <li>ایک مختصر سروے مکمل کریں۔</li>
+            <li>ایک ایپ یا براؤزر ڈاؤنلوڈ اور انسٹال کریں۔</li>
+            <li>ایک آسان رجسٹریشن فارم مکمل کریں۔</li>
+          </ul>
+        </li>
+        <li>شرکت کو حتمی شکل دینے کے لیے مطلوبہ تفصیلات جمع کریں۔</li>
+        <li>آپ کے Surfe.be اکاؤنٹ میں فوراً $100 جمع ہو جائیں گے!</li>
+      </ol>
     </div>
-</div>
 
-<!-- Footer -->
-<div class="footer">
-    <p>© 2024 Earn Rewards Now. تمام حقوق محفوظ ہیں۔</p>
-    <p><a href="#">پرائیویسی پالیسی</a> | <a href="#">سروس کی شرائط</a></p>
-</div>
+    <!-- Withdraw Button -->
+    <div class="text-center mt-4">
+      <a href="#" class="cta-btn" id="withdrawBtn" style="background-color: #475569;" disabled>ابھی $100 نکالیں</a>
+    </div>
 
-<!-- Sticky CTA -->
-<div class="sticky-cta" id="sticky-cta">
-    <a href="https://superfolder.net/pauldev">💰 ابھی $50 حاصل کریں</a>
-</div>
+    <!-- Testimonial Section -->
+    <div class="testimonial-section">
+      <h2>ہمارے صارفین کیا کہتے ہیں؟</h2>
+      <div class="testimonial">
+        <div class="testimonial-header">
+          <img src="https://i.pravatar.cc/60?img=3" alt="صارف کی تصویر">
+          <div>
+            <p class="testimonial-name">ڈاکٹر یاسر</p>
+            <p class="testimonial-location">کراچی، پاکستان</p>
+          </div>
+        </div>
+        <p>"Surfe.be کی بدولت میں نے آن لائن پیسے کمانے کو آسان پایا۔ میں نے ایک مختصر سروے مکمل کیا اور رجسٹریشن کی، اور چند منٹوں میں $100 میرے اکاؤنٹ میں جمع ہو گئے۔ یہ واقعی لاجواب ہے!"</p>
+      </div>
+    </div>
+  </div>
 
-<script>
-    window.addEventListener('scroll', () => {
-        const cta = document.getElementById('sticky-cta');
-        if (window.scrollY > 300) {
-            cta.classList.add('visible');
-        } else {
-            cta.classList.remove('visible');
-        }
+  <!-- Sticky Button -->
+  <a href="https://trkfiles.com/show.php?l=0&u=173518&id=65110" class="sticky-button" target="_blank">💵 ابھی دعوی کریں</a>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2024 <a href="https://surfe.be">Surfe.be</a>. جملہ حقوق محفوظ ہیں۔</p>
+  </footer>
+
+  <script>
+    // Simulate unlock of Withdraw button
+    document.getElementById("offer-link").addEventListener("click", function () {
+      setTimeout(function () {
+        const withdrawBtn = document.getElementById("withdrawBtn");
+        withdrawBtn.style.backgroundColor = "#3F8EFA";
+        withdrawBtn.disabled = false;
+        withdrawBtn.textContent = "ابھی $100 نکالیں!";
+      }, 3000); // Simulate a 3-second process to unlock
     });
-</script>
-
+  </script>
 </body>
 </html>
+
+
+
+
 
